# c-avr_demo

./: .gitignore  CMakeLists.txt  Toolchain-avr-ATtiny861.cmake  makefile_avr.make  notes.txt  todo.txt
